<resources>
    <string name="app_name">Compass</string>
    <string name="title_home">Descubrir</string>
    <string name="title_juegos">Jugar</string>
    <string name="title_playlists">Playlists</string>
    <string name="title_find">Búsqueda</string>
    <string name="title_profile">Perfil</string>
    <string name="action_settings">Settings</string>
    <string name="action_find">Busqueda</string>
    <string name="action_profile">Perfil</string>
    <string name="label_nombre">Nombre</string>
    <string name="label_apellido">Apellido</string>
    <string name="label_correo">Correo Electrónico</string>
    <string name="button_actualizar_perfil">Actualizar Perfil</string>
    <string name="hint_nombre">Nombre</string>
    <string name="hint_apellido">Apellido</string>
</resources>